add github as a converter

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
                 <label class="col-sm-3 col-form-label">Input Type</label>
                 <div class="col-sm-9">
                   <div class="form-check">
+                    <input class="form-check-input output-type" type="radio" name="output" id="output-github" value="github">
+                    <label class="form-check-label" for="output-github">GitHub</label>
+                  </div>
+                  <div class="form-check">
                     <input class="form-check-input output-type" type="radio" name="output" id="output-gitlab" value="gitlab">
                     <label class="form-check-label" for="output-gitlab">GitLab</label>
                   </div>
